- Added .targets file to source. (Issue #4) - Updated targets to emit References.tt (non-hintpath references). (Issue #3) - Added .ps1 files to tools path in .nuspec - Removed Custom Tool from .tt files (Issue #2)

--- a/AssemblyReferencesTT/AssemblyReferencesTT.csproj
+++ b/AssemblyReferencesTT/AssemblyReferencesTT.csproj
@@ -53,6 +53,7 @@
     <None Include="content\AssemblyReferences.tt">
       <LastGenOutput>AssemblyReferences.txt</LastGenOutput>
     </None>
+    <None Include="content\References.tt" />
     <None Include="NuGetPackage.ps1" />
     <None Include="NuGetSetup.ps1" />
     <None Include="NuGet.exe" />
