--- a/AssemblyReferencesTT/Package.nuspec
+++ b/AssemblyReferencesTT/Package.nuspec
@@ -1,32 +1,28 @@
-<?xml version="1.0"?>
-<package >
-  <metadata>
-    <id>AssemblyReferencesTT</id>
-    <version>1.0.12</version>
-    <title>AssemblyReferences.tt</title>
-    <authors>Kern Herskind Nightingale</authors>
-    <owners>Herskind Limited</owners>
-    <description>
-      Build target for generating a T4 file with a list of assembly directives based on the projects references. References with a hint path and solution references will be listed the AssemblyReferences.tt file. This file can then be included by other T4 files.
-    </description>
-    <releaseNotes>
-    </releaseNotes>
-    <summary>
-      Build target for generating a T4 file with a list of assembly directives based on the projects references.
-    </summary>
-    <language>en-GB</language>
-    <projectUrl>https://github.com/herskinduk/AssemblyReferencesTT</projectUrl>
-    <iconUrl>https://nuget.org/Content/Images/packageDefaultIcon-50x50.png</iconUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
-    <copyright>Copyright  2014</copyright>
-    <dependencies>
-    </dependencies>
-    <references></references>
-    <tags >t4 text template transformation toolkit assembly project reference references csproj tt hintpath hint path</tags>
-  </metadata>
-  <files>
-    <file src="build\" target="build" />
-    <file src="content\" target="content" />
-  </files>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
+    <metadata>
+        <id>AssemblyReferencesTT</id>
+        <version>1.0.13</version>
+        <title>AssemblyReferences.tt</title>
+        <authors>Kern Herskind Nightingale</authors>
+        <owners>Herskind Limited</owners>
+        <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
+        <projectUrl>https://github.com/herskinduk/AssemblyReferencesTT</projectUrl>
+        <iconUrl>https://nuget.org/Content/Images/packageDefaultIcon-50x50.png</iconUrl>
+        <requireLicenseAcceptance>false</requireLicenseAcceptance>
+        <description>Build target for generating a T4 file with a list of assembly directives based on the projects references. References with a hint path and solution references will be listed the AssemblyReferences.tt file. This file can then be included by other T4 files.</description>
+        <summary>Build target for generating a T4 file with a list of assembly directives based on the projects references.</summary>
+        <releaseNotes />
+        <copyright>Copyright  2014</copyright>
+        <language>en-GB</language>
+        <tags>t4 text template transformation toolkit assembly project reference references csproj tt hintpath hint path</tags>
+    </metadata>
+    <files>
+        <file src="build\AssemblyReferencesTT.targets" target="build\AssemblyReferencesTT.targets" />
+        <file src="content\AssemblyReferences.tt" target="content\AssemblyReferences.tt" />
+        <file src="content\References.tt" target="content\References.tt" />
+        <file src="tools\init.ps1" target="tools\init.ps1" />
+        <file src="tools\install.ps1" target="tools\install.ps1" />
+        <file src="tools\uninstall.ps1" target="tools\uninstall.ps1" />
+    </files>
 </package>
